Booking Tickets by User and corrected addFlight logic
